[project]
name = "rapid-street-assessment-rool"
version = "0.1.0"
description = "Rapid Street Assessments (RSAs) are designed to quickly retrieve comprehensive information about streets and the surrounding area."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "duckdb>=1.3.0",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.6",
    "loguru>=0.7.3",
    "pandas==2.2.2",
    "pyarrow==18.0.0",
    "requests>=2.32.3",
    "robyn>=0.71.0",
    "shapely>=2.0.7"
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]
