[project]
name = "rapid-street-assessment-rool"
version = "0.1.1"
description = "Rapid Street Assessments (RSAs) are designed to quickly retrieve comprehensive information about streets and the surrounding area."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "duckdb>=1.4.1",
    "fastapi>=0.121.1",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.3",
    "loguru>=0.7.3",
    "openai>=2.8.1",
    "pandas==2.3.3",
    "prometheus-client>=0.23.1",
    "pyarrow==22.0.0",
    "requests>=2.32.5",
    "shapely>=2.1.2",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
]
